  o New #794728: Option to disable theme block regions so homebox can go full-width
  o New #794728: Allow homeboxes to live in code via hook_homebox() - included sample module displaying this
  o New #794728: Features integration
  o New #794728: Organic Groups integration
  o New #794728: Offer Homebox as a profile tab
  o New #794728: Region width overrides
  o New #794728: Custom user-entered blocks
  o New #794728: Indication of unsaved changes on the page
  o New #794728: Admin option to flush user settings per page

6.x-2.1 2010/08/10
  o Updated feature integration to work with the latest changes in the features module.
  o Many other minor improvements, fixes, and name-space changes.
  o Look for the next version to contain a more extensive API

6.x-2.x-dev 2011/02/02
  o Lots of updates to support drupal.org usage after redesign.
  o by brianV: Whitespace fixes and CHANGELOG.txt updates.
  o by brianV: Match column widths with case-insensitive regex rather than exact match in homebox.js due to IE irregularity.
  
6.x-3.0-beta1 2011/02/17
  o Moved 6.x-2.x-dev branch to 6.x-3.x since 6.x-2.x-dev is not compatible with 6.x-2.1 release do to drupal.org redesign-related updates.
  o #1063928 by drumm: Fix equalizeColumnHeight() JS function, which fixes the block landing zones.

6.x-3.0-beta2 2011/02/17
  o by brianV: fix autosave
  
6.x-3.0-beta3 2011/10/04
  o by brianV: revert #1063928 to remove 100% width columns from the maximum-height check.
  o #946206 by rv0 | flecus: Fixed Changed the color of the block is not saved.
  o Filter and validate homebox titles.
  
6.x-3.0-beta4 2011/10/05
  o Fix syntax error.

6.x-3.0-beta5 2011/10/05
  o #1236848 by catch: Fixed _homebox_check_views_block_access() looks unnecessary.
  o #1287550 by vectoroc: Changed notice in homebox_prepare_block().
  o Fix syntax error.
  
6.x-3.x-dev xxxx/xx/xx
  o #1175786 by brianV: Fixed Path claims to be optional but is not.